# manga-subscription

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: run_cron.sh  setup_login.py
src/: amazon.py  browser.py  config.py  main.py  notifier.py  state.py
state/: state.json
